--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About Me</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .about-section {
+            text-align: center;
+            padding: 60px 20px;
+        }
+        .about-section img {
+            width: 150px;
+            height: 150px;
+            border-radius: 10px;
+        }
+    </style>
+</head>
+<body>
+    <section class="about-section container">
+        <h1 class="fw-bold">About</h1>
+        <img src="images/about/1.jpg" alt="Profile Picture" class="img-fluid my-4">
+        <p class="text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet dolor dolor. Suspendisse ligula elit, hendrerit ut bibendum quis, facilisis vitae est. Vivamus vitae felis sit amet sem rhoncus euismod. Praesent sem dolor, ullamcorper nec tempor quis, pulvinar sed dolor. Quisque pretium felis ac nisi posuere, id commodo lorem porttitor.
+        </p>
+        <p class="text-muted">
+            Duis convallis ligula sed pretium tristique. Duis nunc risus, lacinia eget cursus id, suscipit ac metus. Sed varius sed tortor congue aliquam. In in dapibus diam, in auctor purus. Praesent vitae tristique diam.
+        </p>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
