--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             text-align: center;
             padding: 60px 20px;
         }
+        .about-section h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
         .about-section img {
             width: 150px;
             height: 150px;
