--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <h1 class="fw-bold">About</h1>
         <img src="images/about/1.jpg" alt="Profile Picture" class="img-fluid my-4">
         <p class="text-muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet dolor dolor. Suspendisse ligula elit, hendrerit ut bibendum quis, facilisis vitae est. Vivamus vitae felis sit amet sem rhoncus euismod. Praesent sem dolor, ullamcorper nec tempor quis, pulvinar sed dolor. Quisque pretium felis ac nisi posuere, id commodo lorem porttitor.
+            I am a 31-year-old, ambitious and dynamic individual who embraces new challenges.
+            The training as a laboratory technician and the BSc in Biotechnology have strengthened my knowledge in process technology.
+            The bachelor thesis showed me opportunities in IT, which led to my MSc and my deeper interest in programming.
         </p>
         <p class="text-muted">
             Duis convallis ligula sed pretium tristique. Duis nunc risus, lacinia eget cursus id, suscipit ac metus. Sed varius sed tortor congue aliquam. In in dapibus diam, in auctor purus. Praesent vitae tristique diam.
