updated about me section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             The bachelor thesis showed me opportunities in IT, which led to my MSc and my deeper interest in programming.
         </p>
         <p class="text-muted">
-            Duis convallis ligula sed pretium tristique. Duis nunc risus, lacinia eget cursus id, suscipit ac metus. Sed varius sed tortor congue aliquam. In in dapibus diam, in auctor purus. Praesent vitae tristique diam.
+            I am driven by the opportunity to leverage my data science skills to make a meaningful impact.
+            With a background in biotechnology and applied computational life sciences, I am passionate about transforming complex scientific data into actionable insights.
+            My motivation stems from a desire to bridge the gap between data and decision-making, particularly in fields that influence public health and innovation.
         </p>
     </section>
 
