--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/projects/1.jpg" class="card-img-top" alt="Project 1">
+                    <img src="images/projects/1.jpg" class="card-img-top" alt="Drug availability tracker">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Project 1</h5>
+                        <h5 class="card-title fw-bold">Drug availability tracker</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
                         <p class="fw-bold">Blog Post | Source Code</p>
                     </div>
