--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
         }
+        .green-text {
+            color: green;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -54,7 +58,7 @@
                     <img src="images/projects/1.jpg" class="card-img-top" alt="Drug availability tracker">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Drug availability tracker</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
+                        <p class="card-text"><span class="green-text">Ongoing:</span>Develop a web scraper and analysis tool to track drug availability and market trends from online pharmacies and medical supply websites, aiding researchers and patiens.</p>
                         <p class="fw-bold">Blog Post | Source Code</p>
                     </div>
                 </div>
