changed project icon size

--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
         .projects-section img {
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
         }
         .green-text {
             color: green;
+            font-weight: bold;
+        }
+        .red-text {
+            color: red;
             font-weight: bold;
         }
     </style>
@@ -58,7 +65,7 @@
                     <img src="images/projects/1.jpg" class="card-img-top" alt="Drug availability tracker">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Drug availability tracker</h5>
-                        <p class="card-text"><span class="green-text">Ongoing:</span>Develop a web scraper and analysis tool to track drug availability and market trends from online pharmacies and medical supply websites, aiding researchers and patiens.</p>
+                        <p class="card-text"><span class="green-text">Ongoing: </span>Develop a web scraper and analysis tool to track drug availability and market trends from online pharmacies and medical supply websites, aiding researchers and patiens.</p>
                         <p class="fw-bold">Blog Post | Source Code</p>
                     </div>
                 </div>
