--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         .projects-section img {
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
-            width: 40%;
-            height: 40px;
+            width: 80%;
+            height: 120px;
             object-fit: cover;
+            margin: auto;
         }
         .green-text {
             color: green;
