--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
             border-radius: 10px;
         }
         .projects-section img {
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
             width: 100%;
-            height: 150px;
-            object-fit: cover;
+            height: auto;
+            max-width: 200px;
+            max-height: 150px;
+            display: block;
+            margin: auto;
+            object-fit: contain;
         }
         .green-text {
             color: green;
