--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/projects/2.jpg" class="card-img-top" alt="Project 2">
+                    <img src="images/projects/2.jpg" class="card-img-top" alt="Heart disease prediction">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Project 2</h5>
+                        <h5 class="card-title fw-bold">Heart disease prediction</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
                         <p class="fw-bold">Blog Post | Source Code</p>
                     </div>
