--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <img src="images/projects/2.jpg" class="card-img-top" alt="Heart disease prediction">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Heart disease prediction</h5>
-                        <p class="card-text">Developing a heart disease prediction model using sklearn classifiers (Logistic Regression, k-NN, Random Forest) on the UCI Heart Disease Dataset</p>
+                        <p class="card-text">Heart disease prediction model using sklearn classifiers (Logistic Regression, k-NN, Random Forest) on the UCI Heart Disease Dataset</p>
                         <p class="fw-bold">Blog Post | Source Code</p>
                     </div>
                 </div>
