added links to projects

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Drug availability tracker</h5>
                         <p class="card-text"><span class="green-text">Ongoing: </span> Develop a web scraper and analysis tool to track drug availability and market trends from online pharmacies and medical supply websites, aiding researchers and patiens.</p>
-                        <p class="fw-bold">Blog Post | Source Code</p>
+                        <p class="fw-bold"><a href="https://github.com/sandro-roth/Drug-Price-Availability-Tracker" class="text-decoration-none">Source Code</a></p>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Heart disease prediction</h5>
                         <p class="card-text">Heart disease prediction model using sklearn classifiers (Logistic Regression, k-NN, Random Forest) on the UCI Heart Disease Dataset</p>
-                        <p class="fw-bold">Blog Post | Source Code</p>
+                        <p class="fw-bold"><a href="https://github.com/sandro-roth/Heart_Disease_Prediction" class="text-decoration-none">Source Code</a></p>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Project 3</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
-                        <p class="fw-bold">Blog Post | Source Code</p>
+                        <p class="fw-bold"><a href="https://github.com/sandro-roth/ansible" class="text-decoration-none">Source Code</a></p>
                     </div>
                 </div>
             </div>
